alterações para fazer a apresentação

--- a/log.html
+++ b/log.html
@@ -1796,25 +1796,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8377],[],[[4,0,0,[],[1,314,4040],[[0,5,6,0,0,0,0,0,[1,315,1868],[[0,7,8,0,9,10,0,0,[1,316,1857],[[8,316,2,11]]],[0,12,8,0,13,14,0,0,[1,2173,10],[[8,2183,2,15]]]]],[2,16,6,0,0,0,0,0,[1,2184,2169],[[0,17,8,0,18,0,0,0,[1,2186,2167],[]]]]]],[19,0,0,[],[1,4363,4010],[[0,5,6,0,0,0,0,0,[1,4365,1635],[[0,7,8,0,9,10,0,0,[1,4366,1628],[[8,4366,2,11]]],[0,12,8,0,13,14,0,0,[1,5994,6],[[8,6000,2,15]]]]],[0,20,6,0,0,21,0,0,[1,6001,109],[[0,22,8,0,23,24,0,0,[1,6001,109],[[8,6002,2,25]]]]],[0,26,6,0,0,27,0,0,[1,6113,110],[[0,22,8,0,23,28,0,0,[1,6113,109],[[8,6114,2,29]]]]],[2,16,6,0,0,0,0,0,[1,6224,2148],[[0,17,8,0,18,0,0,0,[1,6224,2147],[]]]]]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8896],[],[[4,0,0,[],[1,210,3987],[[0,5,6,0,0,0,0,0,[1,210,1817],[[0,7,8,0,9,10,0,0,[1,210,1817],[[8,210,2,11]]]]],[0,12,6,0,0,0,0,0,[1,2027,9],[[0,13,8,0,14,15,0,0,[1,2027,9],[[8,2036,2,16]]]]],[2,17,6,0,0,0,0,0,[1,2036,2161],[[0,18,8,0,19,0,0,0,[1,2036,2160],[]]]]]],[20,0,0,[],[1,4197,4259],[[0,5,6,0,0,0,0,0,[1,4197,1849],[[0,7,8,0,9,10,0,0,[1,4197,1841],[[8,4197,2,11]]]]],[0,21,6,0,0,22,0,0,[1,6046,124],[[0,23,8,0,24,25,0,0,[1,6046,124],[[8,6046,2,26]]]]],[0,27,6,0,0,28,0,0,[1,6172,122],[[0,23,8,0,24,29,0,0,[1,6173,121],[[8,6173,2,30]]]]],[2,17,6,0,0,0,0,0,[1,6294,2162],[[0,18,8,0,19,0,0,0,[1,6294,2162],[]]]]]]],[[2,31,6,0,0,0,0,0,[1,8456,440],[[0,32,33,0,34,35,0,0,[1,8456,437],[[8,8893,2,36]]]]]],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PaginaTeste","*C:\\Users\\ju_le\\OneDrive\\Área de Trabalho\\Desenvolvimento\\robotTeste\\PaginaTeste.robot","*PaginaTeste.robot","*Cenário de teste 01 - Abrir Pagina Web","*Abrir Pagina de Teste","*Resource","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Chrome' to base url '<a href=\"https://juliarodrigues606.github.io/paginaTeste/\">https://juliarodrigues606.github.io/paginaTeste/\x3c/a>'.","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Pagina de Teste Automação - Júlia Rodrigues","*Page title is 'Pagina de Teste Automação - Júlia Rodrigues'.","*Fechar Navegador Web","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Cenário de teste 02 - Preencher dados","*Preencher meu nome","*Julia","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name, ${name}","*Typing text 'Julia' into text field 'name'.","*Preencher meu email","*juliarodrigues606@gmai.com","*email, ${email}","*Typing text 'juliarodrigues606@gmai.com' into text field 'email'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*PaginaTeste","*C:\\Users\\ju_le\\OneDrive\\Área de Trabalho\\Desenvolvimento\\robotTeste\\PaginaTeste.robot","*PaginaTeste.robot","*Cenário de teste 01 - Abrir Pagina Web","*Abrir Pagina de Teste","*Resource","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Chrome' to base url '<a href=\"https://juliarodrigues606.github.io/paginaTeste/\">https://juliarodrigues606.github.io/paginaTeste/\x3c/a>'.","*Verificar titulo da pagina","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Pagina de Teste Automação - Júlia Rodrigues","*Page title is 'Pagina de Teste Automação - Júlia Rodrigues'.","*Fechar Navegador Web","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Cenário de teste 02 - Preencher dados","*Preencher meu nome","*Julia","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name, ${name}","*Typing text 'Julia' into text field 'name'.","*Preencher meu email","*juliarodrigues606@gmai.com","*email, ${email}","*Typing text 'juliarodrigues606@gmai.com' into text field 'email'.","*Emitir mensagem no slack","*Post Message To Channel","*RobotNotifications","*<p>POST a custom message to a Slack or Mattermost channel.\x3c/p>","*Executei meu Teste, icon_emoji=robot_face, username=Robot, channel=robot-notifications","*ok"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"PaginaTeste","name":"PaginaTeste","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"PaginaTeste","name":"PaginaTeste","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1626370449196;
+window.output["baseMillis"] = 1626717202792;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8775;
+window.output["generated"] = 9250;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
