--- a/log.html
+++ b/log.html
@@ -1796,25 +1796,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8896],[],[[4,0,0,[],[1,210,3987],[[0,5,6,0,0,0,0,0,[1,210,1817],[[0,7,8,0,9,10,0,0,[1,210,1817],[[8,210,2,11]]]]],[0,12,6,0,0,0,0,0,[1,2027,9],[[0,13,8,0,14,15,0,0,[1,2027,9],[[8,2036,2,16]]]]],[2,17,6,0,0,0,0,0,[1,2036,2161],[[0,18,8,0,19,0,0,0,[1,2036,2160],[]]]]]],[20,0,0,[],[1,4197,4259],[[0,5,6,0,0,0,0,0,[1,4197,1849],[[0,7,8,0,9,10,0,0,[1,4197,1841],[[8,4197,2,11]]]]],[0,21,6,0,0,22,0,0,[1,6046,124],[[0,23,8,0,24,25,0,0,[1,6046,124],[[8,6046,2,26]]]]],[0,27,6,0,0,28,0,0,[1,6172,122],[[0,23,8,0,24,29,0,0,[1,6173,121],[[8,6173,2,30]]]]],[2,17,6,0,0,0,0,0,[1,6294,2162],[[0,18,8,0,19,0,0,0,[1,6294,2162],[]]]]]]],[[2,31,6,0,0,0,0,0,[1,8456,440],[[0,32,33,0,34,35,0,0,[1,8456,437],[[8,8893,2,36]]]]]],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10061],[],[[4,0,0,[],[1,213,5207],[[0,5,6,0,0,0,0,0,[1,216,2234],[[0,7,8,0,9,10,0,0,[1,216,2234],[[8,216,2,11]]]]],[0,12,6,0,0,0,0,0,[1,2450,12],[[0,13,8,0,14,15,0,0,[1,2452,10],[[8,2462,2,16]]]]],[2,17,6,0,0,0,0,0,[1,2462,2957],[[0,18,8,0,19,0,0,0,[1,2462,2957],[]]]]]],[20,0,0,[],[1,5424,4218],[[0,5,6,0,0,0,0,0,[1,5427,1764],[[0,7,8,0,9,10,0,0,[1,5428,1762],[[8,5429,2,11]]]]],[0,21,6,0,0,22,0,0,[1,7192,130],[[0,23,8,0,24,25,0,0,[1,7194,128],[[8,7195,2,26]]]]],[0,27,6,0,0,28,0,0,[1,7322,136],[[0,23,8,0,24,29,0,0,[1,7323,134],[[8,7324,2,30]]]]],[2,17,6,0,0,0,0,0,[1,7460,2182],[[0,18,8,0,19,0,0,0,[1,7460,2182],[]]]]]]],[[2,31,6,0,0,0,0,0,[1,9646,415],[[0,32,33,0,34,35,0,0,[1,9646,415],[[8,10061,2,36]]]]]],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*PaginaTeste","*C:\\Users\\ju_le\\OneDrive\\Área de Trabalho\\Desenvolvimento\\robotTeste\\PaginaTeste.robot","*PaginaTeste.robot","*Cenário de teste 01 - Abrir Pagina Web","*Abrir Pagina de Teste","*Resource","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Chrome' to base url '<a href=\"https://juliarodrigues606.github.io/paginaTeste/\">https://juliarodrigues606.github.io/paginaTeste/\x3c/a>'.","*Verificar titulo da pagina","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Pagina de Teste Automação - Júlia Rodrigues","*Page title is 'Pagina de Teste Automação - Júlia Rodrigues'.","*Fechar Navegador Web","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Cenário de teste 02 - Preencher dados","*Preencher meu nome","*Julia","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name, ${name}","*Typing text 'Julia' into text field 'name'.","*Preencher meu email","*juliarodrigues606@gmai.com","*email, ${email}","*Typing text 'juliarodrigues606@gmai.com' into text field 'email'.","*Emitir mensagem no slack","*Post Message To Channel","*RobotNotifications","*<p>POST a custom message to a Slack or Mattermost channel.\x3c/p>","*Executei meu Teste, icon_emoji=robot_face, username=Robot, channel=robot-notifications","*ok"]);
+window.output["strings"] = window.output["strings"].concat(["*","*PaginaTeste","*C:\\Users\\ju_le\\OneDrive\\Área de Trabalho\\Desenvolvimento\\robotTeste\\PaginaTeste.robot","*PaginaTeste.robot","*Cenário de teste 01 - Abrir Pagina Web","*Abrir Pagina de Teste","*Resource","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Chrome' to base url '<a href=\"https://juliarodrigues606.github.io/paginaTeste/\">https://juliarodrigues606.github.io/paginaTeste/\x3c/a>'.","*Verificar titulo da pagina","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Pagina de Teste Automação - Júlia Rodrigues","*Page title is 'Pagina de Teste Automação - Júlia Rodrigues'.","*Fechar Navegador Web","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Cenário de teste 02 - Preencher dados","*Preencher meu nome","*Julia","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name, ${name}","*Typing text 'Julia' into text field 'name'.","*Preencher meu email","*juliarodrigues606@gmai.com","*email, ${email}","*Typing text 'juliarodrigues606@gmai.com' into text field 'email'.","*Emitir mensagem no slack","*Post Message To Channel","*RobotNotifications","*<p>POST a custom message to a Slack or Mattermost channel.\x3c/p>","*Executei minha suite de teste, icon_emoji=robot_face, username=Robot, channel=robot-notifications","*ok"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"PaginaTeste","name":"PaginaTeste","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"PaginaTeste","name":"PaginaTeste","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1626717202792;
+window.output["baseMillis"] = 1626720069449;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9250;
+window.output["generated"] = 10450;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
